Deuxieme Service crée

--- a/my-movie/src/main/resources/application.properties
+++ b/my-movie/src/main/resources/application.properties
@@ -1,3 +1,25 @@
 port.server=8011
 server.contextPath=/swagger2-demo
 
+# Logging
+logging.file=app.log
+
+# Spring Security default user name and password
+
+
+# INFO ENDPOINT CONFIGURATION
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@q
+info.app.java.version=@java.version@
+
+# SHUTDOWN ENDPOINT (ShutdownEndpoint)
+management.endpoint.shutdown.enabled=true
+
+# HEALTH ENDPOINT
+management.endpoint.health.show-details=always
+
+# ENDPOINTS WEB CONFIGURATION
+management.endpoints.web.exposure.include=info,health
+
