--- a/my-movie/src/main/resources/application.yml
+++ b/my-movie/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8011
+  port: 8012
 
 eureka:
   instance:
@@ -7,7 +7,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8762/eureka/
     healthcheck:
       enabled: true
     lease:
@@ -15,7 +15,7 @@ eureka:
 
 spring:
   application:
-    name: employee-service
+    name: acteurs-service
 
 management:
   security:
