--- a/my-finder/pom.xml
+++ b/my-finder/pom.xml
@@ -41,6 +41,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+
 		<!-- Hystrix Dashboard -->
 
 		<!-- Hystrix Dashboard -->
